--- a/_config.yml
+++ b/_config.yml
@@ -30,6 +30,9 @@ markdown: kramdown
 plugins:
   - jekyll-feed
 
+gems:
+  - jekyll-seo-tag
+
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
 # to override the default setting.
